--- a/001-Titlepage.tex
+++ b/001-Titlepage.tex
@@ -24,7 +24,7 @@ University of Applied Science - Online
 
 \begin{large} 
 \begin{center}
-Study-branch: Cyber-Security Management (Msc) 
+Study-branch: Cyber-Security Management (MSc) 
 \end{center}
 \end{large}
 
@@ -56,7 +56,7 @@ Matrikelnummer: 321148233
 
 \begin{large} 
 \begin{center}
-StephanStr. 48b, 22047 Hamburg
+Stephanstraße 48b, 22047 Hamburg
 \end{center}
 \end{large} 
 
