--- a/biblio.bib
+++ b/biblio.bib
@@ -32,7 +32,24 @@
 @MISC{t-table,
   AUTHOR       = "{T-Table Distribution}",
   title = {{T-Table Distribution}},
-  howpublished = "\url{https://www.tdistributiontable.com//}",
+  howpublished = "\url{https://www.tdistributiontable.com}",
   year = {2022}, 
   NOTE = "[Online; last access 30.05.2022]"
 }
+
+@MISC{wolfram,
+  AUTHOR       = "{Wolfram Alpha Inc}",
+  title = {{Wolfram Alpha}},
+  howpublished = "\url{https://wolfram-alpha.com}",
+  year = {2022}, 
+  NOTE = "[Online; last access 01.06.2022]"
+}
+
+@MISC{wolfram-pvalue,
+  AUTHOR       = "{Wolfram Alpha Inc}",
+  title = {{Wolfram Alpha P-value Widget}},
+  howpublished = "\url{https://www.wolframalpha.com/widgets/view.jsp?id=dd2d67558c08509bd2de289d24cf42ff}",
+  year = {2022}, 
+  NOTE = "[Online; last access 09.06.2022]"
+}
+
