--- a/tasks/task6.tex
+++ b/tasks/task6.tex
@@ -1,5 +1,6 @@
 \chapter{Assignment 6: Bayesian Estimates}
-Given is a random sample $X_1, X_2,...., X_{10}$ with sample size n = 10, where the likelyhood function $f(x|\theta)$ follows a gamma distribution with the parameters $\alpha = 3$ and $\beta = \frac{1}{\theta}$, $\Gamma(3, \frac{1}{\theta})$. The parameter $ \theta $ is also the unknown, which is to be estimated using the Bayes point estimation. Similarly, we also assume that out prior $f(\theta)$ also follows a gamma-distribution with with parameter $\alpha = 3$ and $\beta = 2$, $\Gamma(3, 2)$.\newline \newline
+\subsection{Posterior distribution of $\theta$}
+Given is a random sample $X_1, X_2,...., X_{10}$ with sample size n = 10, where the likelyhood function $f(x|\theta)$ follows a gamma distribution with the parameters $\alpha = 3$ and $\beta = \frac{1}{\theta}$, $\Gamma(3, \frac{1}{\theta})$. The parameter $ \theta $ is also the unknown, which is to be estimated using the Bayes point estimation. Similarly, we assume that out prior $f(\theta)$ also follows a gamma-distribution with with parameter $\alpha = 3$ and $\beta = 2$, $\Gamma(3, 2)$.\newline \newline
 Firstly, we can define our likelyhood function $f(x|\theta)$ using the PDF of the gamma distribution which is given by (see \cite{hogg:2005}, pg 188)
 \begin{equation}\label{eqn:hogg_gamma_pdf}
 f(x) =\begin{cases*}
@@ -17,7 +18,7 @@ Using equation \ref{eqn:hogg_gamma_pdf} we can calculate the likelyhood function
     \item $\Mathbb{L}(x|\theta) = \prod_{i=1}^{n} f(x|\theta)$
     \item $\Mathbb{L}(x|\theta) = \frac{1}{\Gamma(3)^n} \theta^{3n} x_i^{2} e^{-\sum_{i=1}^{n}x_i\theta}$
 \end{enumerate}
-We also can define the prior $f(\theta)$ using the equation \ref{eqn:hogg_gamma_pdf} which turns out to be $f(\theta) = \frac{1}{\Gamma(\alpha)2^3}\theta^2 e^{-\frac{\theta}{2}}$. The posterior  is proportional to the likelyhood function and the prior (\cite{hogg:2005}, pg 672) which can be written as follows:
+We also can define the prior $f(\theta)$ using the equation \ref{eqn:hogg_gamma_pdf} which turns out to be $f(\theta) = \frac{1}{\Gamma(\alpha)2^3}\theta^2 e^{-\frac{\theta}{2}}$. Now using the prior and the likelyhood function the posterior can be computed. We know that the posterior  is proportional to the likelyhood function and the prior (\cite{hogg:2005}, pg 672) which can be written as follows:
 \begin{equation} \label{eqn:bayes_prop}
     f(\theta|x) \propto \Mathbb{L}(x|\theta) f(\theta)
 \end{equation}
@@ -29,7 +30,9 @@ Using the proportional property from equation \ref{eqn:bayes_prop}, we can calcu
      \item $f(\theta|x) \propto  \theta^{3n+2} e^{-\sum_{i=1}^{n}x_i\theta +0.5\theta}$ 
     \item $f(\theta|x) \propto  \theta^{3n+3-1} e^{-\theta \sum_{i=1}^{n}x_i +0.5}$  
 \end{enumerate}
-We can see that the posterior also follows a gamma distribution. We can say this because when we compare the obtained results with the gamma PDF (see equation \ref{eqn:hogg_gamma_pdf}) it looks like the gamma PDF with parameters $\alpha=3n+3$ and $\beta=\frac{1}{\sum_{i=1}^{n}x_i +0.5}$. \newline \newline
+We can see that the posterior also follows a gamma distribution. We can say this because when we compare the obtained results with the gamma PDF (see equation \ref{eqn:hogg_gamma_pdf}) it looks like the gamma PDF with parameters $\alpha=3n+3$ and $\beta=\frac{1}{\sum_{i=1}^{n}x_i +0.5}$. 
+
+\subsection{Point estimate using square-error loss}
 Given is the observed mean $\Bar{x} = 17.2$ and we would like to calculate the Bayes point estimate associated with the square-error loss function $\Mathbb{L}[\theta, \delta(y)] = [\theta - \delta(x)]^2$ where $\delta(x)$ is the error. In this case the estimator for the squared-error loss function is the mean of the posterior distribution $\Gamma(3n+3, \frac{1}{\sum_{i=1}^{n}x_i +0.5})$. The mean of a gamma distribution $\mu = \alpha\beta$ (see, \cite{hogg:2005}, pg 189). Accordingly we calculate the mean:
 \begin{enumerate}
     \item $\mu = \alpha\beta$
@@ -38,7 +41,8 @@ Given is the observed mean $\Bar{x} = 17.2$ and we would like to calculate the B
     \item $ \mu = \frac{33}{172.5}$
     \item $ \mu = 0.191$
 \end{enumerate}
-Therefore, the Bayes point estimate associated with the square-error loss $\mu = 0.191$.\newline
+Therefore, the Bayes point estimate associated with the square-error loss $\mu = 0.191$.
+\subsection{Point estimate using mode}
 Lastly, we would like to calculate the Bayes point estimation using the mode and for the gamma distribution the mode can be calculated using the log function of the PDF of the gamma and taking its first derivative with the maximum slope of 0, we get $(\alpha -1)\beta$. Now, using this formula and replacing the values of the parameters from the posterior we get:
 \begin{enumerate}
     \item $mode = (\alpha -1)\beta$
