--- a/tasks/task4.tex
+++ b/tasks/task4.tex
@@ -27,7 +27,7 @@ Furthermore, in the given case we do not know the neither the population mean no
     \end{split}
 \end{equation}
 The critical region or the cutoff can be found out if we look for the significance level $\alpha$ for the corresponding value for the degree of freedom in the T-Distribution table, in our case for a two tailed distribution. A two tailed distribution is chosen for this test because we would like to account for both the positive and the negative sides of the rejection regions giving us more evidence of the similarity between the two samples. This is also the reason why the significance level or the error type I (see \ref{eqn:alpha_2_rr}) has to be divided into two. \newline \newline
-An error I probability, which is the error of rejecting the null hypothesis when $H_0$ is true $\alpha$ of 0.05 or 5\% sounds plausible for this problem. The 5\% error is a widely used value for the $\alpha$. In this experiment the precision for error does not have to be small and an error for this range can be tolerated. Now, we can calculate the degrees of freedom for this test which can be approximated using the harmonic mean (see \cite{Iubh:2021}, pg. 200) which is as follows:
+In this case an error I probability, which is the error of rejecting the null hypothesis when $H_0$ is true, an $\alpha$ of 0.05 or 5\% sounds plausible for this problem. The 5\% error is a widely used value for the $\alpha$ and in this experiment the precision for error does not have to be small and an error for this range can be tolerated. Now, we can calculate the degrees of freedom for this test which can be approximated using the harmonic mean (see \cite{Iubh:2021}, pg. 200) which is as follows:
 \begin{enumerate}
     \item $d.o.f = \frac{2}{\frac{1}{n_1}+\frac{1}{n_2}}$ where $n_1$= 1000 and $n_2$ = 10
     \item $d.o.f = \frac{2}{\frac{1}{1000}+\frac{1}{10}}$
@@ -41,4 +41,4 @@ With the d.o.f we can look up in the T-Table distribution (see \cite{t-table}) t
     \item $T_{obv} = - 0.782$
     \item $|T_{obv}| = 0.782$ ( We take the absolute value because the T - Distribution is symmetric and both tails must be accounted for.)
 \end{enumerate}
-Similarly, we can also calculate the p-value for the given test which is given as $P(T > |T_{obv}| | H_0) = 2P(T > 0.782 | H_0) = 0.443 $ (Calculated using wolfram alpha). Lastly, we can now conclude and say that we do not reject our null hypothesis because the the calculated p-value(0.443)  $> \alpha$ (0.05), which gives us a hint that these two samples are not statistically significant or in other words very similar and produce consistent results.
+Similarly, we can also calculate the p-value for the given test which is given as $P(T > |T_{obv}| | H_0) = 2P(T > 0.782 | H_0) = 0.443 $ (Calculated using P-value widget \cite{wolfram-pvalue}, where v(d.o.f) = 20 and $t_{obv} = 0.782$). Lastly, we can now conclude and say that we do not reject our null hypothesis because the the calculated p-value(0.443)  $> \alpha$ (0.05), which gives us a hint that these two samples are not statistically significant or in other words very similar and produce consistent results.
